Fix modal z-index and overlay bug

--- a/crt_portal/static/sass/admin.scss
+++ b/crt_portal/static/sass/admin.scss
@@ -1,8 +1,13 @@
+.shepherd-modal-overlay-container {
+  display: none;
+}
+
 .shepherd-element {
   background-color: white;
   padding: 0;
   border: 1px solid var(--border-color);
   box-shadow: 0px 0px 10px var(--object-tools-bg);
+  z-index: 100;
 }
 
 .shepherd-title {
